Fix ups on spacing and change basic font to helvetica like

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -5,7 +5,7 @@
   src: url("/fonts/junction.eot");
   src: local("Junction"), url("/fonts/junction.otf") format("opentype"); }
 
-body {font-family:"Lucida Grande", Lucida, Verdana, sans-serif; text-align:center;line-height:1.7em;margin:0;
+body {font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif; text-align:center;line-height:1.7em;margin:0;
 	color:#0f0f0f;}	
 #divPage {width:580px; margin:0 auto;background:white;text-align:left;}
 h1 {font-weight:normal; font-size:2.7em;padding-left:115px;padding-bottom:0.2em;padding-top:0.1em;}
@@ -23,7 +23,7 @@ h3, h4 {color:#ff8c00;font-style:italic;font-weight:normal}
 
 #divHeader {
 	margin: auto;
-	height: 180px;
+	height: 140px;
 	background: url(/images/banner.png) repeat-x center 0;
 	position: relative;
 }
@@ -38,7 +38,10 @@ h3, h4 {color:#ff8c00;font-style:italic;font-weight:normal}
 	border-bottom-style: none;
 	color: #ff8c00;
 	white-space: nowrap;
-	padding: 55px 0 0 240px;
+	top: 0;
+	padding-top: 51px;
+	padding-bottom: 0;
+	padding-right: 0;
 }
 /* Appeal */
 #divAppeal {background:#f9b4b4; color:#333; border-bottom:solid 1px #333; font-size:0.8em; padding-bottom:0.2em;}
@@ -46,7 +49,9 @@ h3, h4 {color:#ff8c00;font-style:italic;font-weight:normal}
 #divPayment {text-align:center; border:solid 1px #ccc; padding:2em 1em 1em 1em; background:#ffff88;}
 
 /* Menu */
-#divMenu {background: #989898;height:2.5em;font-size:0.7em;}
+#divMenu {background: #989898;height:2.5em;font-size:0.7em;
+	margin-bottom: 2em;
+}
 #divMenu ul {width:500px;margin:0 auto;}
 #divMenu ul li {float:right;text-align:center;}
 #divMenu ul li a {margin-left:1em;margin-right:1em;color:white; 
